commit translated contents

--- a/learn-certs-pr/azure-ai-fundamentals/index.yml
+++ b/learn-certs-pr/azure-ai-fundamentals/index.yml
@@ -3,15 +3,15 @@ title: 'Microsoft Certified: Azure AI Fundamentals'
 metadata:
   title: 'Microsoft Certified: Azure AI Fundamentals'
   description: Azure AI Fundamentals validiert grundlegende Kenntnisse über Konzepte für maschinelles Lernen und künstliche Intelligenz sowie zugehörige Microsoft Azure-Services.
-  ms.openlocfilehash: 1703a99d3be61ba068479422516000049a4c972d
-  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
-  ms.translationtype: MT
+  ms.openlocfilehash: dacecbfb79d0de2a83dbfef1f8d6e57a6c5a2dbe
+  ms.sourcegitcommit: 3feaef9b7c87a66f0ae514838177b6a3b911a3f0
+  ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 12/28/2021
-  ms.locfileid: "132270554"
+  ms.lasthandoff: 02/17/2022
+  ms.locfileid: "139044932"
 uid: certification.azure-ai-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
-summary: "Kandidaten für Azure AI Fundamentals certification sollten über grundlegende Kenntnisse der Konzepte maschinellen Lernens (ML) und künstlicher Intelligenz (AI) sowie der zugehörigen Microsoft Azure-Services verfügen.  \n\nDiese Zertifizierung bietet die Gelegenheit, Kenntnisse über gängige ML- und AI-Workloads und deren Implementieren in Azure zu demonstrieren.  \n\nDiese Zertifizierung richtet sich an Kandidaten mit technischem als auch nichttechnischem Hintergrund. Erfahrung in Data-Science und Software-Engineering ist nicht erforderlich. Einige allgemeine Programmierkenntnisse oder -erfahrungen wären jedoch von Vorteil.  \n\nAzure AI-Grundlagen können verwendet werden, um sich auf andere rollenbasierte Azure-Zertifizierungen wie Azure Data Scientist Associate oder Azure AI Engineer Associate vorzubereiten. Dies ist jedoch keine Voraussetzung für eine dieser Zertifizierungen."
+summary: "Die Grundlagen der KI zu beherrschen, kann Ihnen helfen, Ihre Karriere in Schwung zu bringen und Sie darauf vorbereiten, tiefer in die vielen weiteren technischen Möglichkeiten einzutauchen, die Azure bietet. Künstliche Intelligenz (KI) öffnet Möglichkeiten, die vielleicht noch gestern wie Science Fiction erschienen. Mithilfe von KI können Sie Lösungen erstellen, Ihre Apps verbessern und Technologie in vielen Bereichen einschließlich Gesundheitswesen, Finanzmanagement und Umweltschutz voranbringen.\n\n**Die Zertifizierung „Microsoft Certified: Azure AI Fundamentals“ könnte genau das Richtige für Sie sein, wenn Sie folgende Ziele verfolgen:**\n- Beweisen, dass Sie über die KI-Fähigkeiten verfügen, die zum Aufbau einer besseren Welt nötig sind. Ihre **Azure KI Fundamentals**-Zertifizierung kann die Grundlage schaffen, die Sie zum Aufbau Ihrer Karriere benötigen, und Ihr Wissen über gängige KI- und Machine Learning-Workloads demonstrieren, und darüber, was Azure-Dienste für sie lösen können.\n- Überprüfen Ihrer grundlegenden Kenntnisse zu Machine Learning- und KI-Konzepten sowie zugehörigen Azure-Diensten.\n\nSie sollten über allgemeine Programmierkenntnisse oder -erfahrung verfügen, dies ist jedoch keine Voraussetzung. Sie können mit Azure AI Fundamentals Ihr Basiswissen über andere rollenbasierte Azure-Zertifizierungen wie Azure Data Scientist Associate, Azure AI Engineer Associate oder Azure Developer Associate erweitern, dies ist jedoch für keine von ihnen eine Voraussetzung.\n\n**Um sicherzustellen, dass Sie für die Prüfung vorbereitet sind, empfehlen wir Folgendes:**\n- Umfassende Kenntnisse der [gemessenen Qualifikationen](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wGpB).\n- Lernen der relevanten [Inhalte für das Selbststudium](https://aka.ms/AzureLearn_AIFundamentals) auf Microsoft Learn, oder Teilnahme an einem [Microsoft Azure Virtual Training Day: AI Fundamentals](https://mvtd.events.microsoft.com/azure), oder Registrierung für eine [Präsenzschulung](/learn/certifications/courses/ai-900t00) mit einem Microsoft Learning Partner.\n- Teilnahme an der [Übungsprüfung](https://www.mindhub.com/ai-900-microsoft-azure-ai-fundamentals-microsoft-official-practice-test/p/MU-AI-900?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice), um Ihr Wissen und Ihr Verständnis der Prüfungserfahrung zu überprüfen.\n- Abrufen eines Testabonnements und Ausprobieren.\n- Weitere Informationen zu dieser Zertifizierung und zur Vorbereitung finden Sie unter [Master the basics with the Azure AI Fundamentals certification](https://techcommunity.microsoft.com/t5/microsoft-learn-blog/master-the-basics-with-the-azure-ai-fundamentals-certification/ba-p/1666578) (Beherrschen der Grundlagen mit der Azure AI Fundamentals-Zertifizierung).\n\n**Nächste Schritte**\n\nRegistrieren Sie sich für Ihre Prüfung! Nachdem Sie die Prüfung bestanden und Ihre Zertifizierung erhalten haben, präsentieren Sie Ihren Zertifizierungsbadge und Ihre Qualifikationen auf sozialen Plattformen wie LinkedIn. Weitere Informationen finden Sie unter [Verwenden und Teilen von Zertifizierungsbadges](/learn/certifications/badges).\n\nJe nach Ihren Zielen können Sie wählen, die Grundlagen mit der Zertifizierung Azure Data Fundamentals zu beherrschen, mit den Zertifizierungen Azure AI Engineer Associate, Azure Data Scientist Associate oder Azure Developer Associate eine Weiterentwicklung anzustreben oder zu Ihrem (angestrebten) Beruf passend [die richtige Microsoft Azure-Zertifizierung für sich zu finden](https://techcommunity.microsoft.com/t5/microsoft-learn-blog/finding-the-right-microsoft-azure-certification-for-you/ba-p/1469359). "
 subTitle: Azure AI Fundamentals validiert grundlegende Kenntnisse über Konzepte für maschinelles Lernen und künstliche Intelligenz sowie zugehörige Microsoft Azure-Services.
 levels:
 - beginner
@@ -43,16 +43,6 @@ products:
 - azure-text-speech
 - azure-translator-speech
 - azure-translator-text
-courses:
-- uid: course.ai-900t00
-paths:
-- uid: learn.wwl.get-started-with-artificial-intelligence-on-azure
-- uid: learn.wwl.create-no-code-predictive-models-with-azure-machine-learning
-- uid: learn.wwl.explore-computer-vision-microsoft-azure
-- uid: learn.wwl.explore-natural-language-processing
-- uid: learn.wwl.explore-conversational-ai
-- uid: learn.wwl.explore-fundamentals-of-decision-support
-- uid: learn.wwl.explore-fundamentals-of-knowledge-mining
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wAEF
 exams:
 - uid: exam.ai-900
