--- a/learn-certs-pr/d365-business-central-functional-consultant-associate/index.yml
+++ b/learn-certs-pr/d365-business-central-functional-consultant-associate/index.yml
@@ -2,24 +2,17 @@
 title: 'Microsoft Certified: Dynamics 365 Business Central Functional Consultant Associate'
 metadata:
   title: 'Microsoft Certified: Dynamics 365 Business Central Functional Consultant Associate'
-  description: Dynamics 365 Business Central Functional Consultants sind für die Implementierung der wichtigsten Einrichtungsprozesse für kleine und mittlere Unternehmen verantwortlich.
-  ms.openlocfilehash: aab2e537bca6832f0045374dd97d325d20290e2d
-  ms.sourcegitcommit: efdb661b670d6c27e481808027d3b99dd5e023d6
+  description: Dynamics 365 Business Central Functional Consultant-Instanzen sind für die Implementierung der wichtigsten Einrichtungsprozesse für kleine und mittlere Unternehmen mit der Microsoft Dynamics 365 Business Central-App verantwortlich.
+  ms.openlocfilehash: 3b4eff004582ab61d6401104f23e921af180cfc1
+  ms.sourcegitcommit: 3cc70fa27b69d927057ce19978fd294786ea75fb
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 01/24/2022
-  ms.locfileid: "137655881"
+  ms.lasthandoff: 02/14/2022
+  ms.locfileid: "138646016"
 uid: certification.d365-business-central-functional-consultant-associate
 certificationRenewalUid: renewal.d365-business-central-functional-consultant-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: >-
-  > [!IMPORTANT]
-
-  > Die englischsprachige Version dieser Zertifizierung wird am 14. Februar 2022 aktualisiert. Laden Sie das Dokument zur Kompetenzmessung auf der Seite [Prüfung MB-800](/learn/certifications/exams/mb-800) herunter, um zu sehen, was sich ändern wird.
-
-
-  <br/>
-
   Wenn Sie als Functional Consultant zentrale Microsoft Dynamics 365 Business Central-Einrichtungsprozesse für kleine und mittelständische Unternehmen implementieren, ist diese Zertifizierung für Sie geeignet. Sie benötigen Erfahrung im Konfigurieren von Dynamics 365 Business Central-Rollencentern, einschließlich der Anpassung von Erkenntnissen, Hinweisen, Aktionskacheln, Berichten und Diagrammen. Außerdem sollten Sie Business Central mithilfe von Microsoft Power Platform-Komponenten erweitern können.
 
 
@@ -39,10 +32,16 @@ summary: >-
   - Nutzen Sie verfügbare Lernpfade in Microsoft Learn, und führen Sie weitere praktische Übungen durch.
 
   - Melden Sie sich zu einem Präsenzschulungskurs an.
-subTitle: Dynamics 365 Business Central Functional Consultants sind für die Implementierung der wichtigsten Einrichtungsprozesse für kleine und mittlere Unternehmen verantwortlich.
+
+
+  > [!IMPORTANT]
+
+  > Die englischsprachige Version dieser Zertifizierung wurde am 14. Februar 2022 aktualisiert. Laden Sie das Dokument zur Kompetenzmessung auf der Seite [Prüfung MB-800](/learn/certifications/exams/mb-800) herunter, um zu sehen, was sich geändert hat.
+subTitle: Dynamics 365 Business Central Functional Consultant-Instanzen sind für die Implementierung der wichtigsten Einrichtungsprozesse für kleine und mittlere Unternehmen mit der Microsoft Dynamics 365 Business Central-App verantwortlich.
 levels:
 - intermediate
 skills:
+- This list contains the skills measured on the exam associated with this certification. For information about upcoming or recent changes, see the associated exam details page.
 - Set up Business Central
 - Configure financials
 - Configure sales and purchasing
@@ -53,22 +52,6 @@ type: role-based
 products:
 - dynamics-business-central
 - power-platform
-courses:
-- uid: course.mb-800t00
-paths:
-- uid: learn-dynamics.get-started-dynamics-365-business-central
-- uid: learn-dynamics.deploy-configure-dynamics-365-business-central
-- uid: learn-dynamics.work-with-user-interface-dynamics-365-business-central
-- uid: learn-dynamics.setup-reporting-dynamics-365-business-central
-- uid: learn-dynamics.set-up-financial-management-dynamics-365-business-central
-- uid: learn-dynamics.use-journals-dynamics-365-business-central
-- uid: learn-dynamics.trade-get-started-dynamics-365-business-central
-- uid: learn-dynamics.purchase-items-services-dynamics-365-business-central
-- uid: learn-dynamics.sell-items-services-dynamics-365-business-central
-- uid: learn-dynamics.return-items-dynamics-365-business-central
-- uid: learn-dynamics.process-customer-vendor-payments-dynamics-365-business-central
-- uid: learn-dynamics.reconcile-bank-accounts-dynamics-365-business-central
-pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CxSG
 exams:
 - uid: exam.mb-800
 resources:
