--- a/learn-certs-pr/d365-fundamentals-finance-and-operations-apps-erp/index.yml
+++ b/learn-certs-pr/d365-fundamentals-finance-and-operations-apps-erp/index.yml
@@ -3,32 +3,50 @@ title: 'Microsoft Certified: Dynamics 365 Fundamentals (ERP)'
 metadata:
   title: 'Microsoft Certified: Dynamics 365 Fundamentals (ERP)'
   description: Wenn Sie einen umfassenden Einblick in die ERP-Features (Enterprise Resource Planning) von Dynamics 365 haben und mit den Grundlagen der Integration von Finanz- und Betriebsanwendungen mit dem gesamten Microsoft-Ökosystem vertraut sind, ist diese Zertifizierung genau das Richtige für Sie.
-  ms.openlocfilehash: d86b1094c55e010d60f13e0efed6fd15bb567240
-  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
-  ms.translationtype: MT
+  ms.openlocfilehash: 39a0a4dc1ce4fce5ddeeee15f00b1440610125ae
+  ms.sourcegitcommit: 3feaef9b7c87a66f0ae514838177b6a3b911a3f0
+  ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 12/28/2021
-  ms.locfileid: "132106698"
+  ms.lasthandoff: 02/17/2022
+  ms.locfileid: "139045306"
 uid: certification.d365-fundamentals-finance-and-operations-apps-erp
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
 summary: >-
-  Wenn Sie einen umfassenden Einblick in die ERP-Features (Enterprise Resource Planning) von Dynamics 365 haben und mit den Grundlagen der Integration von Finanz- und Betriebsanwendungen mit dem gesamten Microsoft-Ökosystem vertraut sind, ist diese Zertifizierung genau das Richtige für Sie.
+  Unabhängig davon, ob Sie IT-Fachkraft, Entwickler, Geschäftsbeteiligter oder Kursteilnehmer sind, bringen Sie Ihre Karriere in Schwung, indem Sie Ihre Fähigkeiten mit der Zertifizierung für Dynamics 365-Grundlagen (ERP) überprüfen. Der Erwerb dieser Zertifizierung belegt ein umfassendes Verständnis von Dynamics 365-Finanz- und Betriebs-Apps – insbesondere, wie Geschäftsbetriebs- und Finanzteams die Leistungsfähigkeit dieser Lösung nutzen können, um im gesamten Unternehmen ein neues Maß an Effizienz und Effektivität zu erreichen.
 
 
-  Personen, die mit Geschäftsabläufen vertraut sind, ein grundlegendes Verständnis von Finanzprinzipien haben und sich mit Informationstechnologie auskennen – entweder ganz allgemein oder durch einschlägige Berufserfahrung – können diese Zertifizierung nutzen, um diese Fähigkeiten zu überprüfen und ihre Karriere zu fördern.
+  **Die Zertifizierung „Microsoft Certified: Dynamics Fundamentals (ERP)“ könnte genau das Richtige für Sie sein, wenn Sie folgende Ziele verfolgen:**
+
+  - Überprüfen Ihrer Kenntnisse der Grundlagen der Plattform.
+
+  - Demonstrieren Ihres umfassenden Verständnisses der Anwendungen von Dynamics.
+
+  - Hervorheben Ihrer Kenntnisse darüber, wie Dynamics 365 in eine Reihe von Anwendungen integriert werden kann, und Ihres tieferen Verständnisses von Geschäftsvorgängen, Finanzen und ERP.
+
+  - Festigen Sie Ihr Verständnis grundlegender Lösungsfunktionen, bevor Sie mit tiefergehender Spezialisierung fortfahren.
 
 
-  Diese Grundlagenzertifizierung kann von Personen in verschiedenen Phasen ihrer Karriere auf unterschiedliche Weise verwendet werden. Hier sehen Sie einige Beispiele:
+  Sie sollten mit Geschäftsprozessen, Finanzprinzipien und Informationstechnologie vertraut sein.
 
-  - IT-Experten, die ihr umfassendes Verständnis der Anwendungen hervorheben möchten, mit denen sie arbeiten
 
-  - Technische Experten und Entscheidungsträger in Unternehmen, die untersuchen, wie Dynamics 365-Features mit den Anwendungen integriert werden können, die sie verwenden
+  **Um sicherzustellen, dass Sie für die Prüfung vorbereitet sind, empfehlen wir Folgendes:**
 
-  - Projektbeteiligte aus dem Unternehmen und andere, die Dynamics 365 verwenden und entsprechend zeigen möchten, dass sie die Grundlagen der Plattform verstehen
+  - Umfassende Kenntnisse der [gemessenen Qualifikationen](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4JFBT).
 
-  - Entwickler, die ein tieferes Verständnis von Abläufen in den Bereichen Geschäftsbetrieb, Finanzen und ERP nachweisen möchten
+  - Lernen der relevanten [Inhalte für das Selbststudium](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAFfQ) auf Microsoft Learn oder Registrierung für eine [Präsenzschulung](/learn/certifications/courses/MB-920T00).
 
-  - Kursteilnehmer, frische Absolventen und Personen, die sich beruflich umorientieren und die Finanz- und Betriebsanwendungen von Dynamics 365 nutzen möchten, um einen Schritt weiterzukommen
+  - Teilnahme an der [Übungsprüfung](https://www.mindhub.com/mb-920-microsoft-dynamics-365-fundamentals-erp-/p/MU-MB-920), um Ihr Wissen und Ihr Verständnis der Prüfungserfahrung zu überprüfen.
+
+  - Begleitung einer Person in Ihrem Team, die mit der Dynamics ERP-Lösung arbeitet.
+
+
+  **Nächste Schritte**
+
+
+  Registrieren Sie sich für Ihre Prüfung! Nachdem Sie die Prüfung bestanden und Ihre Zertifizierung erhalten haben, präsentieren Sie Ihren Zertifizierungsbadge und Ihre Qualifikationen auf sozialen Plattformen wie LinkedIn. Weitere Informationen finden Sie unter [Verwenden und Teilen von Zertifizierungsbadges](/learn/certifications/badges).
+
+
+  Gemäß Ihrer Ziele können Sie wählen, ob Sie eine Vertiefung mit erweiterten rollenbasierten Zertifizierungen wünschen oder andere Grundlagenzertifizierungen erwerben möchten, sobald Sie diese Zertifizierung erhalten haben. [Der Dynamics 365-Zertifizierungs- und Trainingsleitfaden](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4ITXP) kann Ihnen helfen, die für Sie passenden Zertifizierungen zu identifizieren.
 subTitle: Wenn Sie einen umfassenden Einblick in die ERP-Features (Enterprise Resource Planning) von Dynamics 365 haben und mit den Grundlagen der Integration von Finanz- und Betriebsanwendungen mit dem gesamten Microsoft-Ökosystem vertraut sind, ist diese Zertifizierung genau das Richtige für Sie.
 levels:
 - beginner
@@ -48,14 +66,6 @@ type: fundamentals
 products:
 - dynamics-365
 - dynamics-finance-operations
-courses:
-- uid: course.mb-920t00
-paths:
-- uid: learn.wwl.explore-microsoft-dynamics-365-supply-chain-management
-- uid: learn.wwl.explore-microsoft-dynamics-365-finance
-- uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-commerce
-- uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-human-resources
-- uid: learn.wwl.explore-microsoft-dynamics-365-project-operations-erp
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4JKOU
 exams:
 - uid: exam.mb-920
