--- a/learn-certs-pr/power-platform-fundamentals/index.yml
+++ b/learn-certs-pr/power-platform-fundamentals/index.yml
@@ -3,15 +3,15 @@ title: 'Microsoft Certified: Power Platform Fundamentals'
 metadata:
   title: 'Microsoft Certified: Power Platform Fundamentals'
   description: Beweisen Sie, dass Sie die Kernfunktionen der Power-Plattform verstehen - vom Geschäftswert über die Kernfunktionen des Produkts bis hin zum Erstellen einer einfachen Power Apps-Canvas-App, dem Verbinden von Datenquellen, dem Automatisieren grundlegender Geschäftsprozesse mit Power Automate, dem Erstellen eines Power BI-Dashboards und dem Erstellen leistungsstarker Chatbots mit Power Virtual Agents.
-  ms.openlocfilehash: 5cad2dc5f4e565272f52e7741e12c9478673afd4
-  ms.sourcegitcommit: b69fd4d0c808e4780010278f0cb189c2246f8dc0
-  ms.translationtype: MT
+  ms.openlocfilehash: c3f3ad65430a1b1563dda7233791a441cf373119
+  ms.sourcegitcommit: 3feaef9b7c87a66f0ae514838177b6a3b911a3f0
+  ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 12/28/2021
-  ms.locfileid: "132111887"
+  ms.lasthandoff: 02/17/2022
+  ms.locfileid: "139044448"
 uid: certification.power-platform-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
-summary: "Wenn Sie ein*e Schüler*in, ein*e Studierende*r, ein*e Geschäftskund*in oder eine angehende technische Fachkraft sind, kann diese Zertifizierung Ihre Entwicklung voranbringen und Ihre Karriere fördern, da Sie Ihre Microsoft Power Platform-Qualifikationen nutzen können, um die Produktivität Ihres Teams verbessern. Für das Training sind keine Vorkenntnisse erforderlich, es genügen Grundkenntnisse im Umgang mit Computertechnologien, Datenanalysen, Cloud Computing und dem Internet. Verstehen Sie eine Grundlagenzertifizierung als ersten Schritt, um Ihre Fertigkeiten zu verbessern und andere Zertifizierungen wie z. B. „Microsoft Power Platform Functional Consultant“ zu erwerben.\n\nDie Zertifizierung „Microsoft Power Platform Fundamentals“ genau das Richtige für Sie sein, wenn Sie:\n- Lösungen mit Microsoft Power Platform erstellen\n- Grundlegende Geschäftsprozesse mit Power Automate automatisieren\n- Datenanalysen mit Power BI durchführen \n- Einfache Power Apps-Benutzeroberflächen erstellen\n- Praktische Chatbots mit Power Virtual Agents erstellen\n\nFür diese Zertifizierung gelten keine Voraussetzungen. Wenn Sie jedoch etwas mehr Erfahrung sammeln möchten, können Sie:\n- Eine Person in Ihrem Team begleiten und beobachten, die mit Microsoft Power Platform arbeitet\n- Die auf Microsoft Learn verfügbaren Lernpfade durcharbeiten\n- Sich zu einem Präsenzschulungskurs anmelden"
+summary: "Unabhängig davon, ob Sie eine angehende technische Fachkraft, ein Kursteilnehmer oder Geschäftskunde sind, wird diese Zertifizierung Ihr Wissen über den geschäftlichen Nutzen und die Produktfunktionen von Microsoft Power Platform unter Beweis stellen. Erstellen Sie einfache Power Apps, stellen Sie die Verbindung von Daten mit Dataverse her, erstellen Sie ein Power BI-Dashboard, automatisieren Sie einen Prozess mit Power Automate oder erstellen Sie einen Chatbot mit Power Virtual Agents.\n\n**Die Zertifizierung „Microsoft Certified: Power Platform Fundamentals“ könnte genau das Richtige für Sie sein, wenn Sie folgende Ziele verfolgen:**\n- Demonstrieren des Wissens über das Erstellen von Lösungen mit Microsoft Power Platform.\n- Demonstrieren der Vertrautheit mit der Automatisierung grundlegender Geschäftsprozesse mit Power Automate und dem Erstellen einfacher Power Apps-Anwendungen.\n- Hervorheben der Vertrautheit mit der Durchführung von Datenanalysen mit Power BI und dem Erstellen praktischer Chatbots mit Power Virtual Agents.\n\nSie sollten mit Computertechnologie, Datenanalysen, Cloud Computing und dem Internet vertraut sein. Diese Grundlagenzertifizierung kann für alle Personen, die sich für die Weiterentwicklung mit anderen Zertifizierungen interessieren, als Sprungbrett dienen.\n\n**Um sicherzustellen, dass Sie für die Prüfung vorbereitet sind, empfehlen wir Folgendes:**\n- Umfassende Kenntnisse der [gemessenen Qualifikationen](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43Nnn).\n- Lernen der relevanten [Inhalte für das Selbststudium](/learn/paths/power-plat-fundamentals/) auf Microsoft Learn oder Registrierung für eine [Präsenzschulung](/learn/certifications/courses/pl-900t00).\n- Teilnahme an der [Übungsprüfung](https://www.mindhub.com/pl-900-microsoft-power-platform-fundamentals-microsoft-official-practice-test/p/MU-PL-900), um Ihr Wissen und Ihr Verständnis der Prüfungserfahrung zu überprüfen.\n- Begleitung einer Person in Ihrem Team, die mit Microsoft Power Platform arbeitet.\n\n**Nächste Schritte**\n\nRegistrieren Sie sich für Ihre Prüfung! Nachdem Sie die Prüfung bestanden und Ihre Zertifizierung erhalten haben, präsentieren Sie Ihren Zertifizierungsbadge und Ihre Qualifikationen auf sozialen Plattformen wie LinkedIn. Weitere Informationen finden Sie unter [Verwenden und Teilen von Zertifizierungsbadges](/learn/certifications/badges).\n\nGemäß Ihrer Ziele können Sie wählen, ob Sie eine Vertiefung mit erweiterten rollenbasierten Zertifizierungen wünschen oder andere Grundlagenzertifizierungen erwerben möchten, sobald Sie diese Zertifizierung erhalten haben. Der [Schulungs- und Zertifizierungsleitfaden zu Power Platform](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4ITXR) kann Ihnen helfen, die richtigen Zertifizierungen für sich zu identifizieren.  "
 subTitle: Beweisen Sie, dass Sie die Kernfunktionen der Power-Plattform verstehen - vom Geschäftswert über die Kernfunktionen des Produkts bis hin zum Erstellen einer einfachen Power Apps-Canvas-App, dem Verbinden von Datenquellen, dem Automatisieren grundlegender Geschäftsprozesse mit Power Automate, dem Erstellen eines Power BI-Dashboards und dem Erstellen leistungsstarker Chatbots mit Power Virtual Agents.
 levels:
 - beginner
@@ -29,10 +29,6 @@ roles:
 type: fundamentals
 products:
 - power-platform
-courses:
-- uid: course.pl-900t00
-paths:
-- uid: learn-bizapps.wwl.power-plat-fundamentals
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43KLw
 exams:
 - uid: exam.pl-900
