--- a/learn-certs-pr/azure-fundamentals/index.yml
+++ b/learn-certs-pr/azure-fundamentals/index.yml
@@ -3,15 +3,58 @@ title: 'Microsoft Certified: Azure Fundamentals'
 metadata:
   title: 'Microsoft Certified: Azure Fundamentals'
   description: Azure Fundamentals überprüft das grundlegende Wissen über Cloud-Services und wie diese Services mit Microsoft Azure bereitgestellt werden.
-  ms.openlocfilehash: c96cb6a7066c0c8b58d866e722b15187197af0fd
-  ms.sourcegitcommit: e810ce5501e748cb92937addddb4267cde8adbc7
+  ms.openlocfilehash: 20633b963d12684bef4cf9d32c178ac1c1a580eb
+  ms.sourcegitcommit: 03e9e03e6d167d418c65d28253e619e3ca477f7f
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 01/26/2022
-  ms.locfileid: "137778259"
+  ms.lasthandoff: 02/14/2022
+  ms.locfileid: "138619833"
 uid: certification.azure-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
-summary: "> [!IMPORTANT]\n> Die englischsprachige Version dieser Zertifizierung wurde am 25. Januar 2022 aktualisiert. Laden Sie das Dokument zur Kompetenzmessung auf der Seite [Prüfung AZ-900](/learn/certifications/exams/az-900) herunter, um zu sehen, was sich geändert hat.\n\n<br/>  \nKandidaten für dieses examens sollten über grundlegende Kenntnisse der Cloud-Services und einer Bereitstellung dieser Services mit Microsoft Azure verfügen. Die Zertifizierung richtet sich an Kandidat*innen, die gerade erst anfangen, mit cloudbasierten Lösungen und Diensten zu arbeiten oder neu im Umgang mit Azure sind.\n\nDie Azure Fundamentals-Zertifizierung bietet Ihnen die Möglichkeit, Kenntnisse über Cloudkonzepte, Azure-Dienste, Azure-Workloads, Sicherheit und Datenschutz in Azure sowie Azure-Preise und -Support nachzuweisen. Kandidaten sollten mit den allgemeinen Technologiekonzepten vertraut sein, einschließlich der Konzepte für Netzwerk, Speicher, Computer, Anwendungsunterstützung und Anwendungsentwicklung.\n\nAzure-Grundlagen können verwendet werden, um sich auf andere rollenbasierte Azure- oder Spezialzertifizierungen vorzubereiten. Dies ist jedoch keine Voraussetzung für eine dieser Zertifizierungen."
+summary: >-
+  Es spielt keine Rolle, ob das Gebiet für Sie neu ist, oder Sie dort bereits ein erfahrener Profi sind: Die Beherrschung der Grundlagen von Microsoft Azure kann Ihre Karriere in Schwung bringen und Sie darauf vorbereiten, tiefer in die vielen technischen Möglichkeiten einzutauchen, die Azure bietet.
+
+
+  Die Zertifizierung überprüft Ihre grundlegenden Kenntnisse über Clouddienste und deren Bereitstellung mit Azure. Kandidaten sollten grundlegende Kenntnisse über Cloudkonzepte sowie Azure-Dienste, Workloads, Sicherheit, Datenschutz, Preisgestaltung und Support nachweisen können.
+
+
+  **Die Zertifizierung „Microsoft Certified: Azure Fundamentals“ könnte genau das Richtige für Sie sein, wenn Sie folgende Ziele verfolgen:**
+
+  - Sie möchten Ihr Wissen über Cloud Computing-Konzepte, -Modelle und -Dienste wie öffentliche, private und Hybridcloud neben dem über Infrastructure-as-a-Service (IaaS), Platform-as-a-Service (PaaS) und Software-as-a-Service (SaaS) unter Beweis stellen.
+
+  - Sie möchten Ihre Kenntnisse über die Unterstützung von Sicherheit, Datenschutz, Compliance und Vertrauen durch Azure unter Beweis stellen.
+
+
+  Sie sollten sich mit den Konzepten von Netzwerk, Speicher, Compute, Anwendungsunterstützung und Anwendungsentwicklung vertraut machen. Mit Ihrer Azure Fundamentals-Zertifizierung können Sie Ihre Grundkenntnisse für andere auf Azure-Rollen basierende oder spezielle Zertifizierungen vertiefen, aber dies ist für sie keine Voraussetzung.
+
+
+  **Um sicherzustellen, dass Sie für die Prüfung vorbereitet sind, empfehlen wir Folgendes:**
+
+  - Umfassende Kenntnisse der [gemessenen Qualifikationen](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwUY).
+
+  - Lernen der relevanten [Inhalte für das Selbststudium](https://aka.ms/AzureLearn_Fundamentals) auf Microsoft Learn, oder Teilnahme an einem [Microsoft Azure Virtual Training Day: Fundamentals](https://mvtd.events.microsoft.com/azure), oder Registrierung für eine [Präsenzschulung](/learn/certifications/courses/az-900t00) mit einem Microsoft Learning Partner.
+
+  - Teilnahme an der [Übungsprüfung](https://www.mindhub.com/az-900-microsoft-azure-fundamentals-microsoft-official-practice-test/p/MU-AZ-900?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice), um Ihr Wissen und Ihr Verständnis der Prüfungserfahrung zu überprüfen.
+
+  - Rufen Sie ein Testabonnement ab, und probieren Sie es aus.
+
+  - Weitere Informationen zu dieser Zertifizierung und zur Vorbereitung finden Sie unter [Master the basics with the Azure Fundamentals certification](https://techcommunity.microsoft.com/t5/microsoft-learn-blog/master-the-basics-with-the-azure-fundamentals-certification/ba-p/1650768) (Beherrschen der Grundlagen mit der Azure Fundamentals-Zertifizierung).
+
+
+  **Nächste Schritte**
+
+
+  Registrieren Sie sich für Ihre Prüfung! Nachdem Sie die Prüfung bestanden und Ihre Zertifizierung erhalten haben, präsentieren Sie Ihren Zertifizierungsbadge und Ihre Qualifikationen auf sozialen Plattformen wie LinkedIn. Weitere Informationen finden Sie unter [Verwenden und Teilen von Zertifizierungsbadges](/learn/certifications/badges).
+
+
+  Je nach Ihren Zielen können Sie wählen, ob Sie die Grundlagenkenntnisse mit der Azure Data Fundamentals-Zertifizierung oder der Azure AI Fundamentals-Zertifizierung nachweisen möchten. [Suchen Sie Ihre passende Microsoft Azure-Zertifizierung](https://techcommunity.microsoft.com/t5/microsoft-learn-blog/finding-the-right-microsoft-azure-certification-for-you/ba-p/1469359) alternativ auf Basis Ihres (angestrebten) Berufs.
+
+  <br/>
+
+
+  > [!IMPORTANT]
+
+  > Die englischsprachige Version dieser Zertifizierung wurde am 25. Januar 2022 aktualisiert. Laden Sie das Dokument zur Kompetenzmessung auf der Seite [Prüfung AZ-900](/learn/certifications/exams/az-900) herunter, um zu sehen, was sich geändert hat.
 subTitle: Azure Fundamentals überprüft das grundlegende Wissen über Cloud-Services und wie diese Services mit Microsoft Azure bereitgestellt werden.
 levels:
 - beginner
@@ -31,19 +74,9 @@ roles:
 type: fundamentals
 products:
 - azure
-courses:
-- uid: course.az-900t01
-- uid: course.az-900t00
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3WzVA
 exams:
 - uid: exam.az-900
-paths:
-- uid: learn.az-900-describe-cloud-concepts
-- uid: learn.az-900-describe-core-azure-services
-- uid: learn.az-900-describe-core-solutions-management-tools-azure
-- uid: learn.az-900-describe-general-security-network-security-features
-- uid: learn.az-900-describe-identity-governance-privacy-compliance-features
-- uid: learn.az-900-describe-azure-cost-management-service-level-agreements
 resources:
 - title: Azure-Zertifizierungsplakat
   description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Azure an.
