--- a/learn-certs-pr/azure-solutions-architect/index.yml
+++ b/learn-certs-pr/azure-solutions-architect/index.yml
@@ -3,16 +3,16 @@ title: 'Microsoft Certified: Azure Solutions Architect Expert'
 metadata:
   title: 'Microsoft Certified: Azure Solutions Architect Expert'
   description: Benutzer*innen mit der Zertifizierung „Azure Solution Architect Expert“ verfügen über Fachkenntnisse im Entwerfen von Cloud- und Hybridlösungen, die in Microsoft Azure ausgeführt werden, einschließlich von Compute-, Netzwerk-, Speicher-, Überwachungs- und Sicherheitslösungen.
-  ms.openlocfilehash: 8909f4f17705b8812b0c070ba1c117ae336773d2
-  ms.sourcegitcommit: a99616c85658bcdbb3b95b115da620965190777e
+  ms.openlocfilehash: c6743be8ea25d79245440f51ab20a1404879fbbc
+  ms.sourcegitcommit: 3feaef9b7c87a66f0ae514838177b6a3b911a3f0
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 01/25/2022
-  ms.locfileid: "137685666"
+  ms.lasthandoff: 02/17/2022
+  ms.locfileid: "139044712"
 uid: certification.azure-solutions-architect
 certificationRenewalUid: renewal.azure-solutions-architect
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
-summary: "> [!WARNING]\n> PRÜFUNG AZ-303 UND PRÜFUNG EXAM AZ-304 WERDEN AM 31. MÄRZ 2022 AUSGEMUSTERT. Eine Ersatzprüfung ([Exam AZ-305](/learn/certifications/exams/az-305)) ist in der Betaversion verfügbar.\n\n> [!IMPORTANT]\n> Um diese Zertifizierung zu erhalten, müssen Sie die folgenden Anforderungen erfüllen:\n> - Erwerben der Zertifizierung [Microsoft Certified: Azure Administrator Associate](/learn/certifications/azure-administrator/) und Bestehen von [Exam AZ-305](/learn/certifications/exams/az-305) **oder**\n> - Bestehen Sie das [Examen AZ-303](/learn/certifications/exams/az-303) und das [Examen AZ-304](/learn/certifications/exams/az-304) *(bevor sie am 31. März 2022 auslaufen)*, **oder**\n> - Bestehen der [Prüfung AZ-303](/learn/certifications/exams/az-303) *(vor deren Auslaufen am 31. März 2022)* und der [Prüfung AZ-305](/learn/certifications/exams/az-305)\n> \n> In [diesem Blogbeitrag](https://aka.ms/AzureSlnsArchBlog) finden Sie weitere Informationen zu Zertifizierungsmöglichkeiten.\n> \n> Der Inhalt dieser Zertifizierung wurde am 23. November 2021 aktualisiert. Laden Sie die Dokumente zur Kompetenzmessung auf den Seiten für [Prüfung AZ-303](/learn/certifications/exams/az-303) und [Prüfung AZ-304](/learn/certifications/exams/az-304) herunter, um zu sehen, was sich geändert hat.\n\n<br/>\nKandidat*innen für die Zertifizierung „Azure Solutions Architect Expert“ sollten über Fachkenntnisse im Entwerfen von Cloud- und Hybridlösungen verfügen, die in Microsoft Azure ausgeführt werden, einschließlich von Compute-, Netzwerk-, Speicher-, Überwachungs- und Sicherheitslösungen.\n\n<br/>\nZu den Aufgaben dieser Rolle gehören das Beraten von Projektbeteiligten und Übertragen von Geschäftsanforderungen in Entwürfe für sichere, skalierbare und zuverlässige Azure-Lösungen.\n\nBenutzer*innen mit der Rolle „Azure Solutions Architect Expert“ arbeiten mit Entwickler*innen, Administrator*innen und anderen Rollen zusammen, die für die Implementierung von Lösungen in Azure verantwortlich sind.\n\nKandidat*innen für diese Zertifizierung sollten über fortgeschrittene Erfahrung und Kenntnisse im Zusammenhang mit IT-Vorgängen haben, einschließlich der Bereiche Netzwerk, Virtualisierung, Identität, Sicherheit, Geschäftskontinuität, Notfallwiederherstellung, Datenplattformen und Governance. Ein Fachkraft in dieser Rolle sollte verwalten, wie sich Entscheidungen in den einzelnen Bereichen auf eine Gesamtlösung auswirken. Darüber hinaus sollte sie über Erfahrung mit der Azure-Verwaltung, der Azure-Entwicklung und DevOps-Prozessen verfügen."
+summary: "> [!WARNING]\n> Prüfung AZ-303 und Prüfung AZ-304 werden am 31. März 2022 ausgemustert. Eine Ersatzprüfung, [Prüfung AZ-305](/learn/certifications/exams/az-305), ist verfügbar.\n\n<br/>\nKandidat*innen für die Zertifizierung „Azure Solutions Architect Expert“ sollten über Fachkenntnisse im Entwerfen von Cloud- und Hybridlösungen verfügen, die in Microsoft Azure ausgeführt werden, einschließlich von Compute-, Netzwerk-, Speicher-, Überwachungs- und Sicherheitslösungen.\n\n<br/>\nZu den Aufgaben dieser Rolle gehören das Beraten von Projektbeteiligten und Übertragen von Geschäftsanforderungen in Entwürfe für sichere, skalierbare und zuverlässige Azure-Lösungen.\n\nBenutzer*innen mit der Rolle „Azure Solutions Architect Expert“ arbeiten mit Entwickler*innen, Administrator*innen und anderen Rollen zusammen, die für die Implementierung von Lösungen in Azure verantwortlich sind.\n\nKandidat*innen für diese Zertifizierung sollten über fortgeschrittene Erfahrung und Kenntnisse im Zusammenhang mit IT-Vorgängen haben, einschließlich der Bereiche Netzwerk, Virtualisierung, Identität, Sicherheit, Geschäftskontinuität, Notfallwiederherstellung, Datenplattformen und Governance. Ein Fachkraft in dieser Rolle sollte verwalten, wie sich Entscheidungen in den einzelnen Bereichen auf eine Gesamtlösung auswirken. Darüber hinaus sollte sie über Erfahrung mit der Azure-Verwaltung, der Azure-Entwicklung und DevOps-Prozessen verfügen.\n\n> [!IMPORTANT]\n> Um diese Zertifizierung zu erhalten, müssen Sie die folgenden Anforderungen erfüllen:\n> - Erwerben der Zertifizierung [Microsoft Certified: Azure Administrator Associate](/learn/certifications/azure-administrator/) und Bestehen von [Exam AZ-305](/learn/certifications/exams/az-305) **oder**\n> - Bestehen Sie das [Examen AZ-303](/learn/certifications/exams/az-303) und das [Examen AZ-304](/learn/certifications/exams/az-304) *(bevor sie am 31. März 2022 auslaufen)*, **oder**\n> - Bestehen der [Prüfung AZ-303](/learn/certifications/exams/az-303) *(vor deren Auslaufen am 31. März 2022)* und der [Prüfung AZ-305](/learn/certifications/exams/az-305)\n> \n> In [diesem Blogbeitrag](https://aka.ms/AzureSlnsArchBlog) finden Sie weitere Informationen zu Zertifizierungsmöglichkeiten.\n> \n> Der Inhalt dieser Zertifizierung wurde am 23. November 2021 aktualisiert. Laden Sie die Dokumente zur Kompetenzmessung auf den Seiten für [Prüfung AZ-303](/learn/certifications/exams/az-303) und [Prüfung AZ-304](/learn/certifications/exams/az-304) herunter, um zu sehen, was sich geändert hat."
 subTitle: Benutzer*innen mit der Zertifizierung „Azure Solution Architect Expert“ verfügen über Fachkenntnisse im Entwerfen von Cloud- und Hybridlösungen, die in Microsoft Azure ausgeführt werden, einschließlich von Compute-, Netzwerk-, Speicher-, Überwachungs- und Sicherheitslösungen.
 levels:
 - advanced
@@ -26,15 +26,6 @@ roles:
 type: role-based
 products:
 - azure
-paths:
-- uid: learn.wwl.design-identity-governance-monitor-solutions
-- uid: learn.wwl.design-business-continuity-solutions
-- uid: learn.wwl.design-data-storage-solutions
-- uid: learn.wwl.design-infranstructure-solutions
-- uid: learn.azure-well-architected-framework
-- uid: learn.accelerate-cloud-adoption
-courses:
-- uid: course.az-305t00
 prerequisites:
 - uid: certification.azure-administrator
   isOptional: false
