--- a/learn-certs-pr/d365-functional-consultant-field-service/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-field-service/index.yml
@@ -3,23 +3,16 @@ title: 'Microsoft Certified: Dynamics 365 Field Service Functional Consultant A
 metadata:
   title: 'Microsoft Certified: Dynamics 365 Field Service Functional Consultant Associate'
   description: Dynamics 365 Field Service Functional Consultants sind für das Implementieren von Lösungen verantwortlich, die Ressourcen verwalten, die den Lebenszyklus von Field Service vervollständigen.
-  ms.openlocfilehash: 64ac76f3e8deb2260541ec7005085cc114fa3fb2
-  ms.sourcegitcommit: efdb661b670d6c27e481808027d3b99dd5e023d6
+  ms.openlocfilehash: ae3cd6cc3bda385e36a3011550b647ee8a6cb790
+  ms.sourcegitcommit: 3feaef9b7c87a66f0ae514838177b6a3b911a3f0
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 01/24/2022
-  ms.locfileid: "137657465"
+  ms.lasthandoff: 02/17/2022
+  ms.locfileid: "139045317"
 uid: certification.d365-functional-consultant-field-service
 certificationRenewalUid: renewal.d365-functional-consultant-field-service
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: >-
-  > [!IMPORTANT]
-
-  > Der Inhalt dieser Zertifizierung wurde vor Kurzem aktualisiert. [Prüfung MB-240](/learn/certifications/exams/mb-240) wurde am 12. November 2021 aktualisiert. [Prüfung PL-200](/learn/certifications/exams/pl-200) wurde am 1. Oktober 2021 aktualisiert. Laden Sie die Dokumente zur Kompetenzmessung auf den zugehörigen Prüfungsseiten herunter, um zu sehen, was sich geändert hat.
-
-
-  <br/>
-
   Mit dieser Zertifizierung können Sie Ihre Qualifikationen hervorheben und Ihre Karriere voranbringen, wenn Sie ein Functional Consultant sind, der für das Konfigurieren und Implementieren von Dynamics 365-Lösungen für Kund*innen verantwortlich ist. Functional Consultants für Dynamics 365 Field Service sind für die Implementierung von Lösungen verantwortlich, die Ressourcen verwalten, die den Lebenszyklus von Field Service vervollständigen. Als Functional Consultant wissen Sie, wie Sie mit Projektmanager*innen, Entwickler*innen und Lösungsarchitekt*innen zusammenarbeiten. Sie sollten mindestens ein bis drei Jahre Erfahrung als Functional Consultant bei der Implementierung von Dynamics 365 haben.
 
 
@@ -36,6 +29,11 @@ summary: >-
   - Führen Sie weitere praktische Übungen durch.
 
   - Melden Sie sich zu einem Präsenzschulungskurs an.
+
+
+  > [!IMPORTANT]
+
+  > Der Inhalt dieser Zertifizierung wird bald aktualisiert. [Prüfung MB-240](/learn/certifications/exams/mb-240) wird am 11. März 2022 aktualisiert. [Prüfung PL-200](/learn/certifications/exams/pl-200) wurde am 1. Oktober 2021 aktualisiert. Laden Sie die Dokumente zur Kompetenzmessung auf den zugehörigen Prüfungsseiten herunter, um zu sehen, was sich geändert hat.
 subTitle: Dynamics 365 Field Service Functional Consultants sind für das Implementieren von Lösungen verantwortlich, die Ressourcen verwalten, die den Lebenszyklus von Field Service vervollständigen.
 levels:
 - intermediate
@@ -58,27 +56,6 @@ type: role-based
 products:
 - dynamics-365
 - dynamics-field-service
-courses:
-- uid: course.pl-200t00
-- uid: course.mb-240t00
-paths:
-- uid: learn-dynamics.get-started-using-common-data-service
-- uid: learn-dynamics.manage-permissions-and-administration-for-common-data-service
-- uid: learn-bizapps.create-powerapps
-- uid: learn-bizapps.create-app-models-business-processes
-- uid: learn-bizapps.create-business-process-flow
-- uid: learn-bizapps.automate-process-using-flow
-- uid: learn-bizapps.get-started-power-automate-buttons
-- uid: learn-bizapps.best-practices-environments
-- uid: learn-bizapps.create-use-analytics-reports-power-bi
-- uid: learn-dynamics.create-relationships-business-rules-calculations-and-rollups-in-common-data-service
-- uid: learn-bizapps.work-power-virtual-agents
-- uid: learn-bizapps.bring-ai
-- uid: learn-bizapps.improve-business-performance-ai-builder
-- uid: learn-bizapps.implementing-dyn365-field-service
-- uid: learn-dynamics.manage-work-orders
-- uid: learn-bizapps.connected-field-service
-- uid: learn-dynamics.solve-problems-remote-assist
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUiZ
 exams:
 - uid: exam.pl-200
