--- a/learn-certs-pr/exams/az-305.yml
+++ b/learn-certs-pr/exams/az-305.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Examination
-title: Entwerfen von Microsoft Azure-Infrastrukturlösungen (Beta)
+title: Designing Microsoft Azure Infrastructure Solutions
 metadata:
-  title: 'Prüfung AZ-305: Entwerfen von Microsoft Azure-Infrastrukturlösungen (Beta)'
-  description: 'Prüfung AZ-305: Entwerfen von Microsoft Azure-Infrastrukturlösungen (Beta)'
-  ms.openlocfilehash: b05de9155f6e837f7abfd627d70118bc55b72df3
-  ms.sourcegitcommit: a99616c85658bcdbb3b95b115da620965190777e
-  ms.translationtype: MT
+  title: 'Prüfung AZ-305: Entwerfen von Microsoft Azure-Infrastrukturlösungen'
+  description: 'Prüfung AZ-305: Entwerfen von Microsoft Azure-Infrastrukturlösungen'
+  ms.openlocfilehash: fbe58f38a01cfa1df0d9afde14ccbff2bb8eb4d4
+  ms.sourcegitcommit: ef9a0c1f50da246efe27cc7eeb22866997f9574d
+  ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 01/25/2022
-  ms.locfileid: "137685887"
+  ms.lasthandoff: 02/16/2022
+  ms.locfileid: "138814165"
 uid: exam.az-305
 displayName: AZ-305
-summary: "Die Kandidaten für diese Prüfung sollten über fortgeschrittene Erfahrung und Kenntnisse des IT-Betriebs verfügen, einschließlich Netzwerk, Virtualisierung, Identität, Sicherheit, Geschäftskontinuität, Notfallwiederherstellung, Datenplattformen und Governance. Ein Fachkraft in dieser Rolle sollte verwalten, wie sich Entscheidungen in den einzelnen Bereichen auf eine Gesamtlösung auswirken. Darüber hinaus sollte sie über Erfahrung mit der Azure-Verwaltung, der Azure-Entwicklung und DevOps-Prozessen verfügen.\n\n> [!IMPORTANT]\n> Die Zertifizierung [Microsoft Certified: Azure Solutions Architect Expert](/learn/certifications/azure-solutions-architect/) wird durch Erfüllen der folgenden Anforderungen erlangt:\n> - Erwerben der Zertifizierung [Microsoft Certified: Azure Administrator Associate](/learn/certifications/azure-administrator/) und Bestehen der [Prüfung AZ-305](/learn/certifications/exams/az-305) **oder**\n> - Bestehen von [Exam AZ-303](/learn/certifications/exams/az-303) und [Exam AZ-304](/learn/certifications/exams/az-304) *(bevor diese am 31. März 2022 ablaufen)*, **oder**\n> - Bestehen der [Prüfung AZ-303](/learn/certifications/exams/az-303) *(vor deren Auslaufen am 31. März 2022)* und der [Prüfung AZ-305](/learn/certifications/exams/az-305)\n> \n> HINWEIS: Erforderliche Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie [hier](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams). Betaprüfungen werden nicht sofort bewertet, weil wir Daten zur Qualität der Fragen und der Prüfung sammeln. Erfahren Sie mehr [über den Wert und die Wichtigkeit von Betaprüfungen.](/learn/certifications/beta-exams)"
+summary: "Die Kandidaten für diese Prüfung sollten über fortgeschrittene Erfahrung und Kenntnisse des IT-Betriebs verfügen, einschließlich Netzwerk, Virtualisierung, Identität, Sicherheit, Geschäftskontinuität, Notfallwiederherstellung, Datenplattformen und Governance. Ein Fachkraft in dieser Rolle sollte verwalten, wie sich Entscheidungen in den einzelnen Bereichen auf eine Gesamtlösung auswirken. Darüber hinaus sollte sie über Erfahrung mit der Azure-Verwaltung, der Azure-Entwicklung und DevOps-Prozessen verfügen.\n\n> [!IMPORTANT]\n> Die Zertifizierung [Microsoft Certified: Azure Solutions Architect Expert](/learn/certifications/azure-solutions-architect/) wird durch Erfüllen der folgenden Anforderungen erlangt:\n> - Erwerben der Zertifizierung [Microsoft Certified: Azure Administrator Associate](/learn/certifications/azure-administrator/) und Bestehen der [Prüfung AZ-305](/learn/certifications/exams/az-305) **oder**\n> - Bestehen von [Exam AZ-303](/learn/certifications/exams/az-303) und [Exam AZ-304](/learn/certifications/exams/az-304) *(bevor diese am 31. März 2022 ablaufen)*, **oder**\n> - Bestehen der [Prüfung AZ-303](/learn/certifications/exams/az-303) *(vor deren Auslaufen am 31. März 2022)* und der [Prüfung AZ-305](/learn/certifications/exams/az-305)\n> \n> Notwendige Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie [hier](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams)."
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Entwerfen von Identitäts-, Governance- und Überwachungslösungen, Entwerfen von Datenspeicherlösungen, Entwerfen von Geschäftskontinuitätslösungen und Entwerfen von Infrastrukturlösungen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWLFRU
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=AZ-305&examname=Exam%20AZ-305:%20Designing%20Microsoft%20Azure%20Infrastructure%20Solutions&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-305
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-305&examname=Exam%20AZ-305:%20Designing%20Microsoft%20Azure%20Infrastructure%20Solutions&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-305
 locales:
 - en
 levels:
@@ -29,7 +29,7 @@ roles:
 - solution-architect
 products:
 - azure
-paths:
+studyGuide:
 - uid: learn.wwl.design-identity-governance-monitor-solutions
 - uid: learn.wwl.design-business-continuity-solutions
 - uid: learn.wwl.design-data-storage-solutions
