--- a/learn-certs-pr/exams/mb-240.yml
+++ b/learn-certs-pr/exams/mb-240.yml
@@ -3,27 +3,27 @@ title: Microsoft Dynamics 365 Field Service Functional Consultant
 metadata:
   title: 'Exam MB-240: Microsoft Dynamics 365 Field Service Functional Consultant'
   description: 'Exam MB-240: Microsoft Dynamics 365 Field Service Functional Consultant'
-  ms.openlocfilehash: 4bd8472449f97f5aabd514718a59a447069a9489
-  ms.sourcegitcommit: efdb661b670d6c27e481808027d3b99dd5e023d6
+  ms.openlocfilehash: bd6746d6e8a2e43124ddef3c614b23713edcc7fe
+  ms.sourcegitcommit: ef9a0c1f50da246efe27cc7eeb22866997f9574d
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 01/24/2022
-  ms.locfileid: "137658389"
+  ms.lasthandoff: 02/16/2022
+  ms.locfileid: "138813967"
 uid: exam.mb-240
 displayName: MB-240
-summary: "> [!IMPORTANT]\n> Der Inhalt dieser Prüfung wurde am 12. November 2021 aktualisiert. Bitte laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.\n> \n> HINWEIS: Erforderliche Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie [hier](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams).\n\nKandidat*innen für dieses Examen sind Dynamics 365 Field Service Functional Consultants. Die Kandidat*innen sind für das Implementieren von Lösungen verantwortlich, die Ressourcen verwalten, die den Lebenszyklus von Field Service abschließen.\n\nDiese Expert*innen implementieren die Field Service-Prozesse, die in Zusammenarbeit mit internen und externen Teams konzipiert wurden. Diese Zusammenarbeit umfasst das Konfigurieren der Standardverwaltungsbereiche der Field Service-Anwendung, das Bereitstellen der Connected Field Service-Lösung (IoT) und der mobilen App sowie das Implementieren zusätzlicher erforderlicher Anpassungen. Kandidat*innen sind für das Konfigurieren und Bereitstellen der Field Service-App in Verbindung mit der zentralen Kundenserviceanwendung verantwortlich.\n\nKandidat*innen müssen wissen, wie Ressourcen, Merkmale, Vorfallstypen, Bestandsintegrationen, Servicevereinbarungen, Ressourcenplanung, Arbeitsaufträge, Inspektionen, Dienstaufgaben, Field Service-Benutzerrollen, Field Service-Einstellungen, die Connected Field Service-Lösung (IoT) und die mobile Field Service-App (Dynamics 365) konfiguriert werden. Außerdem müssen sie wissen, wie Komponenten der Field Service-App angepasst werden."
+summary: "Kandidat*innen für dieses Examen sind Dynamics 365 Field Service Functional Consultants. Die Kandidat*innen sind für das Implementieren von Lösungen verantwortlich, die Ressourcen verwalten, die den Lebenszyklus von Field Service abschließen.\n\nDiese Expert*innen implementieren die Field Service-Prozesse, die in Zusammenarbeit mit internen und externen Teams konzipiert wurden. Diese Zusammenarbeit umfasst das Konfigurieren der Standardverwaltungsbereiche der Field Service-Anwendung, das Bereitstellen der Connected Field Service-Lösung (IoT) und der mobilen App sowie das Implementieren zusätzlicher erforderlicher Anpassungen. Kandidat*innen sind für das Konfigurieren und Bereitstellen der Field Service-App in Verbindung mit der zentralen Kundenserviceanwendung verantwortlich.\n\nKandidat*innen müssen wissen, wie Ressourcen, Merkmale, Vorfallstypen, Bestandsintegrationen, Servicevereinbarungen, Ressourcenplanung, Arbeitsaufträge, Inspektionen, Dienstaufgaben, Field Service-Benutzerrollen, Field Service-Einstellungen, die Connected Field Service-Lösung (IoT) und die mobile Field Service-App (Dynamics 365) konfiguriert werden. Außerdem müssen sie wissen, wie Komponenten der Field Service-App angepasst werden.\n\n> [!IMPORTANT]\n> Die englischsprachige Version dieser Prüfung wird am 11. März 2022 aktualisiert. Laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.\n> \n> Notwendige Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie [hier](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams)."
 subTitle: 'In diesem Examen wird Ihre Fähigkeit geprüft, die folgenden technischen Aufgaben auszuführen: das Konfigurieren von Field Service-Anwendungen, das Verwalten von Arbeitsaufträgen, das Planen und Senden von Arbeitsaufträgen, das Verwalten der mobilen Field Service-App (Dynamics 365), das Verwalten des Bestands und der Einkäufe sowie das Implementieren von Ressourcen und verknüpften Geräten.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Vzxi
 practiceTestUrl: https://www.mindhub.com/mb-240-microsoft-dynamics-365-field-service-microsoft-official-practice-test/p/MU-MB-240?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=MB-240&examname=Exam%20MB-240:%20Microsoft%20Dynamics%20365%20for%20Field%20Service&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-240
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MB-240&examname=Exam%20MB-240:%20Microsoft%20Dynamics%20365%20for%20Field%20Service&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-240
 locales:
 - en
 - ja
 levels:
 - intermediate
 skills:
-- The content of this exam was updated on November 12, 2021. Please download the exam skills outline below to see what changed.
+- The English language version of this exam will be updated on March 11, 2022. Please download the exam skills outline below to see what’s changing.
 - Configure field service applications (20-25%)
 - Manage work orders (25-30%)
 - Schedule and dispatch work orders (20-25%)
@@ -39,7 +39,7 @@ exams:
 - uid: exam.pl-200
 courses:
 - uid: course.mb-240t00
-paths:
+studyGuide:
 - uid: learn-bizapps.implementing-dyn365-field-service
 - uid: learn-dynamics.manage-work-orders
 - uid: learn-bizapps.connected-field-service
