--- a/learn-certs-pr/exams/mb-800.yml
+++ b/learn-certs-pr/exams/mb-800.yml
@@ -3,30 +3,30 @@ title: Microsoft Dynamics 365 Business Central Functional Consultant
 metadata:
   title: 'Examen MB-800: Microsoft Dynamics 365 Business Central Functional Consultant'
   description: 'Examen MB-800: Microsoft Dynamics 365 Business Central Functional Consultant'
-  ms.openlocfilehash: 71feda2aa85ce6a4fc05d4f57da91fd5b54294d2
-  ms.sourcegitcommit: efdb661b670d6c27e481808027d3b99dd5e023d6
+  ms.openlocfilehash: cbe4c95b15bf4417eab76bec890323aa1ab788dd
+  ms.sourcegitcommit: 3cc70fa27b69d927057ce19978fd294786ea75fb
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 01/24/2022
-  ms.locfileid: "137659027"
+  ms.lasthandoff: 02/14/2022
+  ms.locfileid: "138646040"
 uid: exam.mb-800
 displayName: MB-800
-summary: "> [!IMPORTANT]\n> Die englischsprachige Version dieser Prüfung wird am 14. Februar 2022 aktualisiert. Bitte laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.\n> \n> HINWEIS: Erforderliche Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie [hier](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams).\n\nDie Kandidaten für diese Prüfung sind funktionale Berater, die zentrale Anwendungseinrichtungsprozesse für kleine und mittlere Unternehmen implementieren. Sie implementieren und konfigurieren die Dynamics 365 Business Central-App, einschließlich der Einrichtung der wichtigsten App-Funktionen und -Module sowie der Migration von Daten nach Business Central.\n\nBerater konfigurieren die Benutzeroberfläche in Zusammenarbeit mit dem Implementierungsteam, um dem Unternehmen Handhabbarkeit und einfache Navigation zu bieten. Sie konfigurieren Rollenzentren, einschließlich der Anpassung von Erkenntnissen, Hinweisen, Aktionskacheln, Berichten, Diagrammen und der Erweiterung von Business Central mit Hilfe von Power Platform-Komponenten.\n\nKandidaten haben über die Business Central-App praktische Kenntnisse über die Erfüllung der Benutzeranforderungen, einschließlich grundlegender Kenntnisse über Finanzmanagement, Verkauf, Einkauf und Inventar.\n\nKandidaten für diese Prüfung sind normalerweise auf einen oder mehrere Funktionssätze von Business Central spezialisiert. Sie verstehen die Rolle von Business Central in Bezug auf die Dynamics 365-Anwendungssuite."
+summary: "Die Kandidaten für diese Prüfung sind funktionale Berater, die zentrale Anwendungseinrichtungsprozesse für kleine und mittlere Unternehmen implementieren. Sie implementieren und konfigurieren Microsoft Dynamics 365 Business Central einschließlich der Einrichtung der wichtigsten Funktionen und Module sowie der Migration von Daten nach Business Central.\n\nKandidaten konfigurieren die Anwendung in Zusammenarbeit mit dem Implementierungsteam, um dem Unternehmen Handhabbarkeit und Benutzerfreundlichkeit zu bieten. Sie können Rollenzentren einschließlich der Anpassung von Erkenntnissen, Hinweisen, Aktionskacheln, Berichten, Diagrammen konfigurieren und erweitern Business Central mit Hilfe von Microsoft Power Platform-Komponenten.\n\nKandidaten haben über die Verwendung von Business Central praktische Kenntnisse über die Erfüllung der Geschäftsanforderungen einschließlich grundlegender Kenntnisse über Finanzmanagement, Verkauf, Einkauf und Inventar.\n\nKandidaten für diese Prüfung sind normalerweise auf einen oder mehrere Funktionssätze von Business Central spezialisiert. Sie verstehen die Rolle von Business Central in Bezug auf die Microsoft 365- und Dynamics 365-Anwendungssuite.\n\n> [!IMPORTANT]\n> Die englischsprachige Version dieser Prüfung wurde am 14. Februar 2022 aktualisiert. Bitte laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.\n> \n> Notwendige Punktzahl: 700. [Weitere Informationen zur Prüfungsauswertung finden Sie hier.](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams)"
 subTitle: 'In diesem Examen wird Ihre Fähigkeit bewertet, die folgenden Aufgaben auszuführen: Einrichten von Business Central, Konfigurieren von Finanzdaten, Konfigurieren von Verkauf und Einkauf sowie Ausführen von Business Central-Vorgängen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CxSE
 practiceTestUrl: https://in.mindhub.com/mb-800-microsoft-dynamics-365-business-central-functional-consultant-microsoft-official-practice-test/p/MU-MB-800?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=MB-800&examname=Exam%20MB-800:%20Microsoft%20Dynamics%20365%20Business%20Central%20Functional%20Consultant&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-800
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MB-800&examname=Exam%20MB-800:%20Microsoft%20Dynamics%20365%20Business%20Central%20Functional%20Consultant&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-800
 locales:
 - en
 levels:
 - intermediate
 skills:
-- The English language version of this exam will be updated on February 14, 2022. Please download the exam skills outline below to see what’s changing.
+- The English language version of this exam was updated on February 14, 2022. Please download the exam skills outline below to see what changed.
 - Set up Business Central (20-25%)
-- Configure financials (25-30%)
-- Configure sales and purchasing (10-15%)
-- Perform Business Central operations (30-35%)
+- Configure financials (30-35%)
+- Configure sales and purchasing (15-20%)
+- Perform Business Central operations (25-30%)
 roles:
 - functional-consultant
 products:
@@ -34,7 +34,7 @@ products:
 - power-platform
 courses:
 - uid: course.mb-800t00
-paths:
+studyGuide:
 - uid: learn-dynamics.get-started-dynamics-365-business-central
 - uid: learn-dynamics.deploy-configure-dynamics-365-business-central
 - uid: learn-dynamics.work-with-user-interface-dynamics-365-business-central
