--- a/learn-certs-pr/exams/pl-400.yml
+++ b/learn-certs-pr/exams/pl-400.yml
@@ -3,26 +3,26 @@ title: Microsoft Power Platform Developer
 metadata:
   title: 'Examen PL-400: Microsoft Power Platform Developer'
   description: 'Examen PL-400: Microsoft Power Platform Developer'
-  ms.openlocfilehash: f0ad0c6cc536dd4447615165113e74f992e8ca19
-  ms.sourcegitcommit: a99616c85658bcdbb3b95b115da620965190777e
+  ms.openlocfilehash: 25f0d4a993ee608c0031bee68fdaa0a4a0eba3fd
+  ms.sourcegitcommit: 3cc70fa27b69d927057ce19978fd294786ea75fb
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 01/25/2022
-  ms.locfileid: "137685523"
+  ms.lasthandoff: 02/14/2022
+  ms.locfileid: "138646030"
 uid: exam.pl-400
 displayName: PL-400
-summary: "> [!NOTE]\n> Das Produktteam hat kürzlich die Umbenennung von Common Data Service in Microsoft Dataverse abgeschlossen. Die Sicherheitsrolle „Common Data Service-Benutzer“ heißt nun „Basic-Benutzer“. Der Common Data Service-Connector ist jetzt der Microsoft Dataverse-Connector. Diese Änderung wird seit dem 24. November 2021 in den Prüfungen berücksichtigt.\n> \n> [!IMPORTANT]\n> Der Inhalt dieser Prüfung wurde am 23. Juni 2021 aktualisiert. Bitte laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.\n\n<br/>  \nKandidaten für diese Prüfung entwerfen, entwickeln, sichern und entstören Power Platform-Lösungen. Die Kandidaten implementieren die Komponenten einer Lösung, zu denen Anwendungserweiterungen, individuelle Benutzererlebnisse, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und benutzerdefinierte Visualisierungen gehören.\n\n<br/>\nDie Kandidaten müssen über fundierte Kenntnisse des Power Platform-Services verfügen, einschließlich eines umfassenden Verständnisses der Funktionen, Grenzen und Einschränkungen. Die Kandidaten sollten ein grundlegendes Verständnis der DevOps-Praktiken für Power-Platform haben.\n\nDie Kandidaten sollten über Entwicklungserfahrung verfügen, die Power Platform-Services, JavaScript, JSON, TypeScript, C #, HTML, .NET, Microsoft Azure, Microsoft 365, RESTful-Web-Services, ASP.NET und Microsoft Power BI umfasst."
+summary: "Kandidaten für diese Prüfung entwerfen, entwickeln, sichern und entstören Power Platform-Lösungen. Die Kandidaten implementieren die Komponenten einer Lösung, zu denen Anwendungserweiterungen, individuelle Benutzererlebnisse, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und benutzerdefinierte Visualisierungen gehören.\n\n<br/>\nDie Kandidaten müssen über fundierte Kenntnisse des Power Platform-Services verfügen, einschließlich eines umfassenden Verständnisses der Funktionen, Grenzen und Einschränkungen. Die Kandidaten sollten ein grundlegendes Verständnis der DevOps-Praktiken für Power-Platform haben.\n\nDie Kandidaten sollten über Entwicklungserfahrung verfügen, die Power Platform-Services, JavaScript, JSON, TypeScript, C #, HTML, .NET, Microsoft Azure, Microsoft 365, RESTful-Web-Services, ASP.NET und Microsoft Power BI umfasst.\n\n> [!IMPORTANT]\n> Die englischsprachige Version dieser Prüfung wird am 14. März 2022 aktualisiert. Laden Sie das unten gezeigte Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.\n> \n> Notwendige Punktzahl: 700. [Weitere Informationen zur Prüfungsauswertung finden Sie hier.](/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams)"
 subTitle: 'In diesem Examen wird Ihre Fähigkeit geprüft, die folgenden technischen Aufgaben zu bewältigen: Erstellen eines technischen Designs; Konfigurieren einer Microsoft Dataverse-Instanz; Erstellen und Konfigurieren von Power Apps; Konfigurieren der Geschäftsprozessautomatisierung; Erweitern der Benutzeroberfläche; Erweitern der Plattform und Entwickeln von Integrationen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4BeRV
 practiceTestUrl: https://in.mindhub.com/pl-400-microsoft-power-platform-developer-microsoft-official-practice-test/p/MU-PL-400?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=PL-400&examname=Exam%20PL-400:%20Microsoft%20Power%20Platform%20Developer&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-400
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=PL-400&examname=Exam%20PL-400:%20Microsoft%20Power%20Platform%20Developer&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-400
 locales:
 - en
 levels:
 - intermediate
 skills:
-- The content of this exam was updated on June 23, 2021. Please download the exam skills outline below to see what changed.
+- The English language version of this exam will be updated on March 14, 2022. Please download the exam skills outline below to see what’s changing.
 - Create a technical design (10-15%)
 - Configure Microsoft Dataverse (15-20%)
 - Create and configure Power Apps (15-20%)
@@ -38,7 +38,7 @@ products:
 - common-data-service
 courses:
 - uid: course.pl-400t00
-paths:
+studyGuide:
 - uid: learn-bizapps.create-powerapps
 - uid: learn-bizapps.create-app-models-business-processes
 - uid: learn-dynamics.implementing-customer-engagement-online
