--- a/learn-certs-pr/microsoft-365-fundamentals/index.yml
+++ b/learn-certs-pr/microsoft-365-fundamentals/index.yml
@@ -2,55 +2,54 @@
 title: 'Microsoft 365 Certified: Fundamentals'
 metadata:
   title: 'Microsoft 365 Certified: Fundamentals'
-  description: 'Zeigen Sie, dass Sie die verfügbaren Optionen unter Microsoft 365 kennen und die Vorteile von Cloud Services, dem Software as a Service (SaaS) Cloud Modell, und der Implementieren des Microsoft 365 Cloud Dienstes.'
+  description: Zeigen Sie, dass Sie die verfügbaren Optionen unter Microsoft 365 kennen und die Vorteile von Cloud Services, dem Software as a Service (SaaS) Cloud Modell, und der Implementieren des Microsoft 365 Cloud Dienstes.
+  ms.openlocfilehash: 45b835b7f9b941e7d1c5e4a62cb0c328880d874b
+  ms.sourcegitcommit: 3feaef9b7c87a66f0ae514838177b6a3b911a3f0
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 02/17/2022
+  ms.locfileid: "139044547"
 uid: certification.microsoft-365-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
-summary: "> [!NOTE]\n> Das Produktteam hat vor Kurzem die Umbenennung mehrerer Technologien abgeschlossen, die in dieser Prüfung eine Rolle spielen. Zu den Änderungen zählt Folgendes:\n> - Der Windows Virtual Desktop heißt jetzt Azure Virtual Desktop\n> - Workplace Analytics heißt jetzt Viva Insights\n> - Cloud App Security heißt jetzt Microsoft Defender for Cloud Apps\n> - Microsoft 365 Security Center heißt jetzt Microsoft 365 Defender-Portal\n> \n> Diese Änderungen werden seit dem 28.\_Januar\_2022 in der Prüfung berücksichtigt.\n\n<br/>\nZeigen Sie, dass Sie die verfügbaren Optionen unter Microsoft 365 kennen und die Vorteile von Cloud Services, dem Software as a Service (SaaS) Cloud Modell, und der Implementieren des Microsoft 365 Cloud Dienstes."
-subTitle: 'Zeigen Sie, dass Sie die verfügbaren Optionen unter Microsoft 365 kennen und die Vorteile von Cloud Services, dem Software as a Service (SaaS) Cloud Modell, und der Implementieren des Microsoft 365 Cloud Dienstes.'
+summary: "Unabhängig davon, ob Sie ein Geschäftskunde oder Administrator sind oder Ihre technische Karriere beginnen, bietet Ihnen diese Zertifizierung die Möglichkeit, sich als Cloudbotschafter zu beweisen. Zusätzlich zur Validierung Ihrer Kenntnisse von Microsoft 365-Funktionen verdeutlicht der Erwerb dieser Zertifizierung Ihrer Organisation, dass Sie die Vorteile der Einführung von Clouddiensten, die Grundlagen eines SaaS-Cloudmodells (Software-as-a-Service) und den Nutzen der Implementierung von Microsoft 365-Clouddiensten verstehen.  \n\n**Die Zertifizierung „Microsoft 365 Certified: Azure Fundamentals“ könnte genau das Richtige für Sie sein, wenn Sie folgende Ziele verfolgen:**\n- Demonstrieren grundlegender Kenntnisse über Clouddienste, z. B. Standardmethoden, Überlegungen und Vorteile.\n- Demonstrieren der Beherrschung von SaaS-Lösungen, insbesondere Microsoft 365-Angeboten.\n- Hervorheben der Vertrautheit mit den verfügbaren Microsoft 365-Clouddienstoptionen.\n\nSie sollten sich mit allgemeinen IT-Herausforderungen wie der Verwaltung von Unternehmenslizenzen und Supportplänen vertraut machen.\n\n**Um sicherzustellen, dass Sie für die Prüfung vorbereitet sind, empfehlen wir Folgendes:**\n- Umfassende Kenntnisse der [gemessenen Qualifikationen](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwVw).\n- Lernen der relevanten [Inhalte für das Selbststudium](https://aka.ms/M365Learn_Fundamentals) auf Microsoft Learn oder Registrierung für eine [Präsenzschulung](/learn/certifications/courses/ms-900t01).\n- Teilnahme an der [Übungsprüfung](https://www.mindhub.com/ms-900-microsoft-365-fundamentals-microsoft-official-practice-test/p/MU-MS-900), um Ihr Wissen und Ihr Verständnis der Prüfungserfahrung zu überprüfen.\n- Begleitung einer Person in Ihrem Team, die mit Microsoft 365 arbeitet.\n\n**Nächste Schritte**\n\nRegistrieren Sie sich für Ihre Prüfung! Nachdem Sie die Prüfung bestanden und Ihre Zertifizierung erhalten haben, präsentieren Sie Ihren Zertifizierungsbadge und Ihre Qualifikationen auf sozialen Plattformen wie LinkedIn. Weitere Informationen finden Sie unter [Verwenden und Teilen von Zertifizierungsbadges](/learn/certifications/badges).\n\nErweitern Sie Ihre technischen Fähigkeiten mit unseren rollenbasierten und spezialisierten Zertifizierungen. Der [Schulungs- und Zertifizierungsleitfaden für Microsoft 365](https://aka.ms/M365TrainCertDeck) sowie der [Schulungs- und Zertifizierungsleitfaden für Sicherheit, Compliance und Identität](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4J4Mm) können Ihnen helfen, die richtigen Zertifizierungen für sich zu identifizieren. \n\n<br/>\n\n> [!NOTE]\n> Das Produktteam hat vor Kurzem die Umbenennung mehrerer Technologien abgeschlossen, die in dieser Prüfung eine Rolle spielen. Zu den Änderungen zählt Folgendes:\n> - Der Windows Virtual Desktop heißt jetzt Azure Virtual Desktop\n> - Workplace Analytics heißt jetzt Viva Insights\n> - Cloud App Security heißt jetzt Microsoft Defender for Cloud Apps\n> - Microsoft 365 Security Center heißt jetzt Microsoft 365 Defender-Portal\n> \n> Diese Änderungen werden seit dem 28. Januar 2022 in der Prüfung berücksichtigt."
+subTitle: Zeigen Sie, dass Sie die verfügbaren Optionen unter Microsoft 365 kennen und die Vorteile von Cloud Services, dem Software as a Service (SaaS) Cloud Modell, und der Implementieren des Microsoft 365 Cloud Dienstes.
 levels:
-  - beginner
+- beginner
 skills:
-  - Describe cloud concepts
-  - Describe core Microsoft 365 services and concepts
-  - 'Explain security, compliance, privacy, and trust in Microsoft 365'
-  - Describe Microsoft 365 pricing and support
+- Describe cloud concepts
+- Describe core Microsoft 365 services and concepts
+- Explain security, compliance, privacy, and trust in Microsoft 365
+- Describe Microsoft 365 pricing and support
 roles:
-  - business-user
-  - administrator
+- business-user
+- administrator
 type: fundamentals
 products:
-  - m365
-  - windows
-  - office-365
-courses:
-  - uid: course.ms-900t01
-paths:
-  - uid: learn.wwl.m365-productivity-teamwork-solutions
-  - uid: learn.wwl.m365-business-management-solutions
-  - uid: learn.wwl.m365-security-compliance-capabilities
-  - uid: learn.wwl.m365-licensing-service-support
-pdfDownloadUrl: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VRKj'
+- m365
+- windows
+- office-365
+pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VRKj
 exams:
-  - uid: exam.ms-900
+- uid: exam.ms-900
 resources:
-  - title: Lernpfad zur Zertifizierung
-    description: 'Entdecken Sie Schulungsressourcen, um die Zertifizierung „Microsoft Certified: Fundamentals“ zu erlangen.'
-    href: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35svT'
-  - title: Schulungs- und Zertifizierungsleitfaden
-    description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-    href: 'https://aka.ms/TrainingCertDeck'
-  - title: Zertifizierungsposter
-    description: 'Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.'
-    href: 'https://aka.ms/traincertposter'
-  - title: Exam Replay
-    description: 'Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.'
-    href: ../deals.md
-  - title: Unterstützung von Zertifizierungen
-    description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
-    href: ../help.md
-  - title: Zertifizierungsdashboard
-    description: 'Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.'
-    href: 'https://www.microsoft.com/learning/dashboard.aspx'
-  - title: Teilen Sie Ihre Zertifizierungsbadges.
-    description: 'Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.'
-    href: ../badges.md
+- title: Lernpfad zur Zertifizierung
+  description: 'Entdecken Sie Schulungsressourcen, um die Zertifizierung „Microsoft Certified: Fundamentals“ zu erlangen.'
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35svT
+- title: Schulungs- und Zertifizierungsleitfaden
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  href: https://aka.ms/TrainingCertDeck
+- title: Zertifizierungsposter
+  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
+  href: https://aka.ms/traincertposter
+- title: Exam Replay
+  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+  href: ../deals.md
+- title: Unterstützung von Zertifizierungen
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  href: ../help.md
+- title: Zertifizierungsdashboard
+  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
+  href: https://www.microsoft.com/learning/dashboard.aspx
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
+  href: ../badges.md
