--- a/learn-certs-pr/power-platform-developer-associate/index.yml
+++ b/learn-certs-pr/power-platform-developer-associate/index.yml
@@ -3,12 +3,12 @@ title: 'Microsoft Certified: Power Platform Developer Associate'
 metadata:
   title: 'Microsoft Certified: Power Platform Developer Associate'
   description: Hier erfahren Sie, wie Kandidat*innen für die Zertifizierung „Microsoft Power Platform Developer Associate“ Power Platform-Lösungen entwerfen, entwickeln, schützen und Probleme im Zusammenhang mit der Lösung beheben.
-  ms.openlocfilehash: 72356810f9a14009c30d569dc47ce5c02af0390c
-  ms.sourcegitcommit: 367335eb84a6583bb7300f39e7d302c9bbd30bea
-  ms.translationtype: MT
+  ms.openlocfilehash: 8ee2499842b97765eb07b56003bc01d208fb8f24
+  ms.sourcegitcommit: 3cc70fa27b69d927057ce19978fd294786ea75fb
+  ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 12/13/2021
-  ms.locfileid: "134694560"
+  ms.lasthandoff: 02/14/2022
+  ms.locfileid: "138645981"
 uid: certification.power-platform-developer-associate
 certificationRenewalUid: renewal.power-platform-developer-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
@@ -34,10 +34,16 @@ summary: >-
   - Durchlaufen Sie verfügbare Lernpfade auf Microsoft Learn.
 
   - Melden Sie sich zu einem Präsenzschulungskurs an.
+
+
+  > [!IMPORTANT]
+
+  > Die englischsprachige Version dieser Zertifizierung wird am 14. März 2022 aktualisiert. Laden Sie das Dokument zur Kompetenzmessung auf der Seite [Exam PL-400](/learn/certifications/exams/pl-400) herunter, um zu sehen, was sich ändern wird.
 subTitle: Hier erfahren Sie, wie Kandidat*innen für die Zertifizierung „Microsoft Power Platform Developer Associate“ Power Platform-Lösungen entwerfen, entwickeln, schützen und Probleme im Zusammenhang mit der Lösung beheben.
 levels:
 - intermediate
 skills:
+- This list contains the skills measured on the exam associated with this certification. For information about upcoming or recent changes, see the associated exam details page.
 - Create a technical design
 - Configure Microsoft Dataverse
 - Create and configure Power Apps
@@ -52,19 +58,6 @@ products:
 - power-platform
 - power-apps
 - common-data-service
-courses:
-- uid: course.pl-400t00
-paths:
-- uid: learn-bizapps.create-powerapps
-- uid: learn-bizapps.create-app-models-business-processes
-- uid: learn-dynamics.implementing-customer-engagement-online
-- uid: learn-bizapps.automate-process-using-flow
-- uid: learn-bizapps.create-use-analytics-reports-power-bi
-- uid: learn-dynamics.integrate-power-platform
-- uid: learn-dynamics.use-power-apps-component-framework
-- uid: learn-bizapps.administer-power-apps-portals
-- uid: learn-bizapps.extend-power-apps-portals
-pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Bhzw
 exams:
 - uid: exam.pl-400
 resources:
@@ -87,5 +80,5 @@ resources:
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Teilen Sie Ihre Zertifizierungsbadges.
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
