--- a/learn-certs-pr/power-platform-solution-architect-expert/index.yml
+++ b/learn-certs-pr/power-platform-solution-architect-expert/index.yml
@@ -3,12 +3,12 @@ title: 'Microsoft Certified: Power Platform Solution Architect Expert'
 metadata:
   title: 'Microsoft Certified: Power Platform Solution Architect Expert'
   description: Benutzer*innen mit der Zertifizierung „Power Platform Solution Architect Expert“ arbeiten mit Projektbeteiligten zusammen und konzentrieren sich auf Lösungen, die sich auf die allgemeinen geschäftlichen und technischen Anforderungen ihrer Organisation auswirken.
-  ms.openlocfilehash: f68253b8ec9bc87084bf6715761791f3c17a1f16
-  ms.sourcegitcommit: 367335eb84a6583bb7300f39e7d302c9bbd30bea
-  ms.translationtype: MT
+  ms.openlocfilehash: 014a0a4a64bb043fdf52cce59a922bf7c67b1d2f
+  ms.sourcegitcommit: 3cc70fa27b69d927057ce19978fd294786ea75fb
+  ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 12/13/2021
-  ms.locfileid: "134694362"
+  ms.lasthandoff: 02/14/2022
+  ms.locfileid: "138645977"
 uid: certification.power-platform-solution-architect-expert
 certificationRenewalUid: renewal.power-platform-solution-architect-expert
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
@@ -26,10 +26,16 @@ summary: >-
   - Melden Sie sich zu einem Präsenzschulungskurs an.
 
   - Machen Sie sich mit den Lernpfaden vertraut, die auf [Microsoft Learn](/learn/paths/become-solution-architect/) verfügbar sind.
+
+
+  > [!IMPORTANT]
+
+  > Die englischsprachige Version dieser Zertifizierung wird am 14. März 2022 aktualisiert. Laden Sie das Dokument zur Kompetenzmessung auf der Seite [Exam PL-600](/learn/certifications/exams/pl-600) herunter, um zu sehen, was sich ändern wird.
 subTitle: Benutzer*innen mit der Zertifizierung „Power Platform Solution Architect Expert“ arbeiten mit Projektbeteiligten zusammen und konzentrieren sich auf Lösungen, die sich auf die allgemeinen geschäftlichen und technischen Anforderungen ihrer Organisation auswirken.
 levels:
 - advanced
 skills:
+- This list contains the skills measured on the exam associated with this certification. For information about upcoming or recent changes, see the associated exam details page.
 - Perform solution envisioning and requirement analyses
 - Architect a solution
 - Implement the solution
@@ -54,12 +60,6 @@ products:
 - azure-api-apps
 - azure-app-configuration
 - azure-app-service
-paths:
-- uid: learn-dynamics.become-solution-architect
-- uid: learn-bizapps.solution-architect-design
-courses:
-- uid: course.pl-600t00
-pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4M56P
 exams:
 - uid: exam.pl-600
 prerequisites:
@@ -90,5 +90,5 @@ resources:
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Teilen Sie Ihre Zertifizierungsbadges.
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
