--- a/learn-certs-pr/security-compliance-and-identity-fundamentals/index.yml
+++ b/learn-certs-pr/security-compliance-and-identity-fundamentals/index.yml
@@ -2,68 +2,103 @@
 title: 'Microsoft Certified: Security, Compliance, and Identity Fundamentals'
 metadata:
   title: 'Microsoft Certified: Security, Compliance, and Identity Fundamentals'
-  description: 'Sie weisen nach, dass Sie mit Microsoft Azure und Microsoft 365 vertraut sind und verstehen, wie die Microsoft-Lösungen für Sicherheit, Compliance und Identität diese Bereiche abdecken, um eine ganzheitliche Lösung zu bieten.'
+  description: Sie weisen nach, dass Sie mit Microsoft Azure und Microsoft 365 vertraut sind und verstehen, wie die Microsoft-Lösungen für Sicherheit, Compliance und Identität diese Bereiche abdecken, um eine ganzheitliche Lösung zu bieten.
+  ms.openlocfilehash: b01c691ec78c0a4af527ee073f038865734c121f
+  ms.sourcegitcommit: 3feaef9b7c87a66f0ae514838177b6a3b911a3f0
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 02/17/2022
+  ms.locfileid: "139044943"
 uid: certification.security-compliance-and-identity-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
-summary: "> [!IMPORTANT]\n> Die englischsprachige Version dieser Zertifizierung wurde am 28.\_Januar\_2022 aktualisiert. Laden Sie das Dokument zur Kompetenzmessung auf der Seite [Prüfung SC-900](/learn/certifications/exams/sc-900) herunter, um zu sehen, was sich geändert hat.\n\n<br/>\nDiese Zertifizierung richtet sich an Personen, die sich mit den Grundlagen von Sicherheit, Compliance und Identität (SCI) in cloudbasierten und verwandten Microsoft-Diensten vertraut machen möchten.\n\nHierbei handelt es sich um eine breite Zielgruppe, zu der Beteiligte im Unternehmen, neue oder vorhandene IT-Expert*innen oder Studierende gehören können, die ein Interesse an Sicherheits-, Compliance- und Identitätslösungen von Microsoft haben.\n\nKandidat*innen sollten mit Microsoft Azure und Microsoft 365 vertraut sein und ein Interesse daran haben, zu verstehen, wie die Microsoft-Lösungen für Sicherheit, Compliance und Identität diese Bereiche abdecken, um eine ganzheitliche Lösung zu bieten."
-subTitle: 'Sie weisen nach, dass Sie mit Microsoft Azure und Microsoft 365 vertraut sind und verstehen, wie die Microsoft-Lösungen für Sicherheit, Compliance und Identität diese Bereiche abdecken, um eine ganzheitliche Lösung zu bieten.'
+summary: >-
+  Unabhängig davon, ob Sie Kursteilnehmer, Geschäftskunde oder IT-Fachkraft sind, stellt diese Zertifizierung sicher, dass Sie eine Reihe von Themen im schnell wachsenden Bereich der Cybersicherheit beherrschen. Diese Grundlagenzertifizierung kann als Sprungbrett dienen, wenn Sie an weiterführenden rollenbasierten Zertifizierungen in den Bereichen Sicherheitsvorgänge, Identitäts- und Zugriffsverwaltung und Informationsschutz interessiert sind.
+
+
+  **Die Zertifizierung „Microsoft Certified: Security, Compliance, and Identity Fundamentals“ könnte genau das Richtige für Sie sein, wenn Sie folgende Ziele verfolgen:**
+
+  - Demonstrieren Ihres Wissens über Microsoft-Lösungen für Sicherheit, Compliance und Identität (SCI; Security, Compliance, Identity).
+
+  - Hervorheben Ihrer Kenntnisse über die Art und Weise, in der Microsoft-SCI-Lösungen ganzheitliche End-to-End-Cybersicherheitsfunktionen bieten.
+
+
+  Sie sollten mit Netzwerk- und Cloud Computing-Konzepten vertraut sein und über allgemeine IT-Kenntnisse bzw. allgemeine praktische Erfahrungen in einer IT-Umgebung und allgemeine Kenntnisse über Microsoft Azure und Microsoft 365 verfügen.
+
+
+  **Um sicherzustellen, dass Sie für die Prüfung vorbereitet sind, empfehlen wir Folgendes:**
+
+  - Umfassende Kenntnisse der [gemessenen Qualifikationen](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Mr81).
+
+  - Lernen der relevanten [Inhalte für das Selbststudium](https://docs.microsoft.com/en-us/users/msftofficialcurriculum-4292/collections/3n4rbqgewwpoon) auf Microsoft Learn oder Registrierung für eine [Präsenzschulung](/learn/certifications/courses/sc-900t00).
+
+  - Teilnahme an der [Übungsprüfung](https://www.mindhub.com/sc-900-microsoft-security-compliance-and-identity-fundamentals-microsoft-official-practice-test/p/MU-SC-900?), um Ihr Wissen und Ihr Verständnis der Prüfungserfahrung zu überprüfen.
+
+  - Begleitung einer Person in Ihrem Team, die in den Bereichen Sicherheit, Compliance und Identitätsverwaltung arbeitet.
+
+
+  **Nächste Schritte**
+
+
+  Registrieren Sie sich für Ihre Prüfung! Nachdem Sie die Prüfung bestanden und Ihre Zertifizierung erhalten haben, präsentieren Sie Ihren Zertifizierungsbadge und Ihre Qualifikationen auf sozialen Plattformen wie LinkedIn. Weitere Informationen finden Sie unter [Verwenden und Teilen von Zertifizierungsbadges](/learn/certifications/badges).
+
+
+  Erweitern Sie Ihre technischen Fähigkeiten mit unseren rollenbasierten Zertifizierungen, die sich auf Sicherheitsvorgänge, Identitäts- und Zugriffsverwaltung und Informationsschutz konzentrieren. Der [Schulungs- und Zertifizierungsleitfaden für Sicherheit, Compliance und Identität](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4J4Mm) kann Ihnen helfen, die richtige Zertifizierung für sich zu identifizieren.
+
+
+  > [!IMPORTANT]
+
+  > Die englischsprachige Version dieser Zertifizierung wurde am 28. Januar 2022 aktualisiert. Laden Sie das Dokument zur Kompetenzmessung auf der Seite [Prüfung SC-900](/learn/certifications/exams/sc-900) herunter, um zu sehen, was sich geändert hat.
+subTitle: Sie weisen nach, dass Sie mit Microsoft Azure und Microsoft 365 vertraut sind und verstehen, wie die Microsoft-Lösungen für Sicherheit, Compliance und Identität diese Bereiche abdecken, um eine ganzheitliche Lösung zu bieten.
 levels:
-  - beginner
+- beginner
 skills:
-  - 'Describe the concepts of security, compliance, and identity'
-  - Describe the capabilities of Microsoft identity and access management solutions
-  - Describe the capabilities of Microsoft security solutions
-  - Describe the capabilities of Microsoft compliance solutions
+- Describe the concepts of security, compliance, and identity
+- Describe the capabilities of Microsoft identity and access management solutions
+- Describe the capabilities of Microsoft security solutions
+- Describe the capabilities of Microsoft compliance solutions
 roles:
-  - business-user
-  - student
+- business-user
+- student
 type: fundamentals
 products:
-  - azure
-  - azure-active-directory
-  - azure-bastion
-  - azure-blueprints
-  - azure-ddos-protection
-  - azure-firewall
-  - azure-policy
-  - azure-security-center
-  - azure-sentinel
-  - azure-web-application-firewall
-  - m365
-  - mem-intune
-  - m365-ems-cloud-app-security
-  - m365-threat-protection
-  - m365-security-score
-  - m365-security-center
-  - mdatp
-  - mem
-  - office-365-atp
-paths:
-  - uid: learn.wwl.describe-concepts-of-security-compliance-identity
-  - uid: learn.wwl.describe-capabilities-of-microsoft-identity-access-management-solutions
-  - uid: learn.wwl.describe-capabilities-of-microsoft-security-solutions
-  - uid: learn.wwl.describe-capabilities-of-microsoft-compliance-solutions
-courses:
-  - uid: course.sc-900t00
-pdfDownloadUrl: 'https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Myp7'
+- azure
+- azure-active-directory
+- azure-bastion
+- azure-blueprints
+- azure-ddos-protection
+- azure-firewall
+- azure-policy
+- azure-security-center
+- azure-sentinel
+- azure-web-application-firewall
+- m365
+- mem-intune
+- m365-ems-cloud-app-security
+- m365-threat-protection
+- m365-security-score
+- m365-security-center
+- mdatp
+- mem
+- office-365-atp
+pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Myp7
 exams:
-  - uid: exam.sc-900
+- uid: exam.sc-900
 resources:
-  - title: Zertifizierungsposter
-    description: 'Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.'
-    href: 'https://aka.ms/traincertposter'
-  - title: Schulungs- und Zertifizierungsleitfaden
-    description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-    href: 'https://aka.ms/TrainingCertDeck'
-  - title: Exam Replay
-    description: 'Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.'
-    href: ../deals.md
-  - title: Zertifizierungsdashboard
-    description: 'Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.'
-    href: 'https://www.microsoft.com/learning/dashboard.aspx'
-  - title: Unterstützung von Zertifizierungen
-    description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
-    href: ../help.md
-  - title: Teilen Sie Ihre Zertifizierungsbadges.
-    description: 'Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.'
-    href: ../badges.md
+- title: Zertifizierungsposter
+  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+  href: https://aka.ms/traincertposter
+- title: Schulungs- und Zertifizierungsleitfaden
+  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  href: https://aka.ms/TrainingCertDeck
+- title: Exam Replay
+  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+  href: ../deals.md
+- title: Zertifizierungsdashboard
+  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
+  href: https://www.microsoft.com/learning/dashboard.aspx
+- title: Unterstützung von Zertifizierungen
+  description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
+  href: ../help.md
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
+  href: ../badges.md
